# SmartDeblur

./: .travis.yml  README.md  index.html  params.json
build-SmartDeblur-Desktop_Qt_5_5_1_clang_64bit-Debug/: .qmake.stash  Makefile  moc_CheckUpdatesThread.cpp  moc_DeconvolutionTool.cpp  moc_HelpDialog.cpp  moc_MainWindow.cpp  moc_WorkerThread.cpp  qrc_MainResources.cpp  ui_HelpDialog.h  ui_MainWindow.h
build-SmartDeblur-Desktop_Qt_5_5_1_clang_64bit-Debug/SmartDeblur.app/Contents/: Info.plist
build-SmartDeblur-Desktop_Qt_5_5_1_clang_64bit-Debug/SmartDeblur.app/Contents/MacOS/: SmartDeblur
build-SmartDeblur-Desktop_Qt_5_5_1_clang_64bit-Debug/SmartDeblur.app/Contents/Resources/: SmartDeblur.rc
sources/: DeconvolutionTool.cpp  DeconvolutionTool.h  ImageUtils.cpp  ImageUtils.h  MainWindow.cpp  MainWindow.h  SmartDeblur.pro  WorkerThread.cpp  WorkerThread.h  main.cpp
sources/Models/: Blur.h  FocusBlur.h
src/: CMakeLists.txt  CheckUpdatesThread.cpp  CheckUpdatesThread.h  DeconvolutionTool.cpp  DeconvolutionTool.h  HelpDialog.cpp  HelpDialog.h  HelpDialog.ui  ImageUtils.cpp  ImageUtils.h  MainResources.qrc  MainWindow.cpp  MainWindow.h  MainWindow.ui  MathUtlis.cpp  MathUtlis.h  SmartDeblur.pro  WorkerThread.cpp  WorkerThread.h  main.cpp  smartdeblur.pro
src/CMakeModules/: FindFFTW.cmake
src/FFTW/: External_FFTW.cmake
src/FFTW/libs/: libfftw3-3.lib
src/Icons/: SmartBlur.icns
src/Models/: Blur.h  CMakeLists.txt  FocusBlur.h  GaussianBlur.h  MotionBlur.h  ProcessingContext.h
src/VS2010/: VS2010.sln
src/VS2010/SmartDeblur/: SmartDeblur.vcxproj  SmartDeblur.vcxproj.filters
www/: updates.xml
